  order
o log current delivery rate and configured delivery rate in qmail-send logs
o document all indimail-mta environment variable in indimail-env man page
o use glibc wrappers for qgetpwent, setpwent, endpwent, qgetpwent_r,
  qgetpwnam, qgetpwuid, qgetpwnam_r, qgetpwuid_r, qgetgrent, qsetgrent,
  qendgrent, qgetgrnam, qgetgrgid, qgetgrnam_r, qgetgrgid_r
===========================================================================
- 26/02/2021
01. svctool: added options to set, unset, remove env variables for supervised
    services
- 27/02/2021
02. install: save all variables using svctool --save-variables --force
03. svctool: use TMPDIR env variable for temp directory
04. updated svctool man page
05. svctool: moved --inittab option to --config
06. svctool: use common function dump_run_header to generate header for all
    run scripts
07. changed error to warning for missing MySQL libs
- 28/02/2021
08. svctool: use common function dump_log_header to create all multilog logger
    scripts
09. svctool: fixed updation of control files mysql_lib and libindimail
10. post install: save variables
- 01/03/2021
11. svctool: updated courier variables (removed IMAP_ENHANCEDVARIABLE for
    courier-imap-5.0.12)
- 02/03/2021
12. svctool: fixed dir variable getting clobbered by export_variables()
13. svctool: added back IMAP_ENHANCEDIDLE for courier-imap-5.0.14
14. smtpd.c: renamed TLSCIPHERS to TLS_CIPHER_LIST
15. sslerator.c: renamed SSL_CIPHER to TLS_CIPHER_LIST
16. indimail.spec: fixed rpmlint percent in pretrans, post
- 09/03/2021
18. svctool: added timeout parameter for indisrvr
- 17/03/2021
19. Open Build Service integration with github using action scripts
- 22/03/2021
20. svctool: removed IMAP_ENHANCEDIDLE variable for courier-imap-5.1.1
- 29/03/2021
21. qmail-send.c, qmail-todo.c: make internal functions, variables static
22. qmail-send.c: refactored job functions (author Rolf Eike Beer - @notqmail)
- 15/04/2021